Code review changes, removed lambda parenthesis Default empty weather in Attractions